<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Horizontal Layout for Profile and Username -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            android:contentDescription="@string/profile_icon"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/tracy" />

        <!-- Username -->
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/search_bar"
        android:orientation="horizontal">

        <!-- Search Icon -->
        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/search" />

        <!-- Search Text -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text" />
    </LinearLayout>

    <ListView
        android:id="@+id/ItemsListView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
