<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoritesActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:text="@string/favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="361dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/app_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.04" />


    <!-- Menu Bar -->

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="Return Home"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Favorite is Empty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:text="Your favorite basket is empty, look for some of your favorite products"
        android:textColor="#666464"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_menu"
        android:padding="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.928"
        tools:ignore="VisualLintBounds">

        <!-- Home Button-->
        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/home_outline"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Favorite Button-->
        <ImageButton
            android:id="@+id/FavoriteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favorite_filled"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <!-- Scan Button-->
        <ImageButton
            android:id="@+id/ScanButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/scan"
            android:src="@drawable/scan"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <!-- Cart Button-->
        <ImageButton
            android:id="@+id/CartButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cart"
            android:src="@drawable/cart_outline"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <!-- Profile Button-->
        <ImageButton
            android:id="@+id/ProfileButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
