<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Bottom navigation bar with icons -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="871dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <!-- Profile Header and other elements -->

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="171dp"
            android:layout_height="158dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/circle_background"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileTitle"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Tracy"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintVertical_bias="0.007" />

        <Button
            android:id="@+id/editProfile"
            android:layout_width="109dp"
            android:layout_height="42dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#E3E3E3"
            android:text="Edit"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileName"
            app:layout_constraintVertical_bias="0.039"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="First Name: Tracy"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lastNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfile"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lastNameLabel"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="Last Name: Mansour"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Email: tam21@mail.aub.edu"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameLabel"
            app:layout_constraintVertical_bias="0.012" />

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Phone Number: +961 81-898919"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintVertical_bias="0.021" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/light_blue"
            android:text="Change password"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneLabel"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/contactUs"
            android:layout_width="107dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="Contact us"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="209dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#F0BA58"
            android:text="Sign out"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactUs"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="211dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="#EF7757"
            android:text="Delete account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactUs"
            app:layout_constraintVertical_bias="0.05" />

        <!-- Bottom Navigation Bar -->
        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="325dp"
            android:layout_height="55dp"
            android:background="@drawable/rounded_menu"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteAccountButton"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home"
                android:src="@drawable/home_outline"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite"
                android:src="@drawable/favorite"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/scan_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/scan"
                android:src="@drawable/scan"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/shop_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cart"
                android:src="@drawable/cart_outline"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_filled"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
